--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -45,6 +45,27 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/selectOptionsAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="#ECF0F1"
+            android:textSize="16dp"
+            android:layout_gravity="center" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
         <Button
             android:id="@+id/removeSelection"
             android:layout_width="wrap_content"
