--- a/PixelSort/app/src/main/res/layout/activity_album_create.xml
+++ b/PixelSort/app/src/main/res/layout/activity_album_create.xml
@@ -151,7 +151,7 @@
 
     <LinearLayout
         android:id="@+id/editOptions"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_height="65dp"
@@ -227,7 +227,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -255,7 +255,7 @@
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="40dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -282,7 +282,7 @@
             android:layout_gravity="center_vertical"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
             android:orientation="horizontal">
             <LinearLayout
